# Reaf-Team_Hackathon-Autumn

./: .gitignore  .vercelignore  CHANGELOG_FRONTEND.md  CHANGES_SUMMARY.txt  DEPLOYMENT.md  DEPLOYMENT_MANIFEST.md  Dockerfile  Dockerfile.agent  FILES_INDEX.md  FINAL_REPORT.md  FRONTEND_SUMMARY.md  FRONTEND_UPDATE_INSTRUCTIONS.md  HACKATHON_CHECKLIST.md  PROJECT_SUMMARY.md  Procfile  Procfile.agent  QUICKSTART.md  README.md  README_FRONTEND_V2.md  START_HERE_RU.md  UPDATED_FILES_LIST.md  VPS_AEZA_SETUP.md  agent.py  agent_production.py  backend_main.py  database_migration.sql  deploy-agent-vps.sh  docker-compose-full.yml  docker-compose.agent.yml  env.example.txt  hostchecker-agent.service  main.py  main_server.py  new_agent.py  new_init.py  pyproject.toml  requirements.txt  runDB.txt  start-local-agent.sh  start.sh  (+14 more)
.vercel/: project.json
docs/: ARCHITECTURE.md  DEPLOYMENT_STRATEGY.md  FAQ.md  IMPLEMENTATION_PLAN.md  INDEX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README2.md  STACK_SUMMARY.md  START_HERE.md  SUMMARY.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx
frontend/src/api/: agents.ts  checks.ts  client.ts
frontend/src/components/agents/: AgentCard.tsx  (+1 more)
frontend/src/hooks/: useDebounce.ts  usePolling.ts  useWebSocket.ts
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Results.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  format.ts  mockData.ts
templates/: agent_status.html  index.html  result.html  style.css
(+12 files in other folders)
