[project]
name = "reaf-team-hackathon-autumn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pythonping>=1.1.4",
    "requests>=2.32.5",
    "ruff>=0.14.2",
    "scapy>=2.6.1",
    "uvicorn[standard]>=0.38.0",
]
